dark mode: fix main chat dark icons

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -422,3 +422,8 @@
 .dark-mode svg.a8c37x1j {
 	fill: var(--primary-icon);
 }
+.dark-mode .crt8y2ji.ppxo33br {
+	fill: var(--primary-icon);
+	fill-opacity: 20%;
+}
+
